final fix for spacing on mobile

--- a/src/components/Page/addResponse/AddResponseHeader.module.sass
+++ b/src/components/Page/addResponse/AddResponseHeader.module.sass
@@ -62,6 +62,7 @@
     width: 470px
     display: inline-block
     max-height: 50px
+    overflow: hidden
 
 .form i
     position: absolute
@@ -75,6 +76,7 @@
     display: flex
     width: 100%
     font-size: 1rem
+    z-index: 100
 
 .form Button
     height: 2rem
